# YOLO_PreTool

./: .gitignore  COCO2YOLO.py  README.md  brain-tumor.yaml  data.yaml  main.py  pre.py  pyproject.toml  train.py  val.py
ui/: mainwindow.py  util.py
